--- a/src/components/notifications-board/notifications-board-item.css
+++ b/src/components/notifications-board/notifications-board-item.css
@@ -1,37 +1,36 @@
 .notifications-board-item {
-  width: 700px;
   display: flex;
   flex-flow: row nowrap;
-  background-color: var(--light-grayish-blue-1);
+  background-color: white;
   border-radius: 1rem;
+  padding: 1rem;
+  gap: 1rem;
+}
+.notifications-board-item.unread {
+  background-color: var(--very-light-grayish-blue);
 }
 
-.notifications-board-item > .avatar {
+.notifications-board-item > .avatar :first-child {
+  height: 2.7rem;
 }
 
-.content-with-image {
-    width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.notifications-board-item > .content {
+.notifications-board-item .content {
   display: flex;
   flex-flow: column;
   align-items: flex-start;
   justify-content: center;
-  gap: 0.5rem;
-  padding: 1rem;
+  /* padding: 1rem; */
 }
 
 .notifications-board-item > .content p {
   margin: 0;
+  color: var(--dark-grayish-blue);
 }
 
 .notifications-board-item > .content > p > .username {
   font-weight: 800;
   cursor: pointer;
+  color: black;
 }
 
 .notifications-board-item > .content > p > .username:active {
@@ -46,4 +45,38 @@
 
 .notifications-board-item > .content > p > .group:active {
   color: var(--blue);
+}
+
+.notifications-board-item > .content > .received {
+  color: var(--grayish-blue);
+  font-weight: 500;
+}
+
+.notifications-board-item > .content > .private-message {
+  margin-top: 1rem;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  border: solid 1px var(--light-grayish-blue-2);
+  font-size: 1.05rem;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.notifications-board-item > .content > .private-message:active {
+  background-color: var(--light-grayish-blue-1);
+}
+
+.notifications-board-item > .related-image {
+  cursor: pointer;
+}
+
+.notifications-board-item > .related-image > img {
+  border-radius: 0.5rem;
+  border: 2px solid transparent;
+  height: 2.7rem;
+  width: auto;
+}
+
+.notifications-board-item > .related-image > img:active {
+  border-color: var(--light-grayish-blue-1);
 }
